...
    ).length,
    streakDays: calculateStreak(validWords),
  }

  return (
    <ViewThemed
      testID="screen-collections"
      style={[
        styles.container,
        {
          paddingTop: insets.top,
        },
      ]}
...
                }
                style={StyleSheet.absoluteFill}
                blurMethod="dimezisBlurView"
              />
              <View style={styles.sectionHeaderHairline} />
              <SectionHeader
                title="Collections"
                showAddButton={userAccessLevel === 'full_access'}
                addButtonText="Create"
                onAddPress={() => setShowCreateModal(true)}
                showImportButton={true}
                onImportPress={() => setShowImportModal(true)}
              />
...
